# libtorch-demo

./: .gitignore  README.md
Cuda-libtorch/: CMakeLists.txt  Cuda-libtorch.cpp  Cuda-libtorch.h  README.md
example-app/: CMakeLists.txt  README.md  torchdemo.cpp  torchdemo.h
libtorch-yolov5/: CMakeLists.txt  export.py
libtorch-yolov5-openvino/: CMakeLists.txt  demo_onnx.py
libtorch-yolov5-openvino/include/: detector.h  libtorch-yolov5.h
libtorch-yolov5-openvino/src/: detector.cpp
libtorch-yolov5/include/: detector.h
libtorch-yolov5/src/: libtorch-yolov5.cpp
libtorch-yolov5/weights/: coco.names
opencv-yolov5-openvino/: CMakeLists.txt  README.md  demo_onnx.py  openvino-yolov5-2.py  openvino-yolov5.py  yolov5Topenvino.docx
opencv-yolov5-openvino/src/: detector.cpp  libtorch-yolov5-openvino.cpp
yolov5-tensorrt/: CMakeLists.txt  CMakeSettings.json  README.md  common.hpp  yololayer.h  yolov5.cpp
